--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -24,7 +24,7 @@ jobs:
     - name: Build and push
       uses: docker/build-push-action@v2
       with:
-        platforms: linux/amd64
+        platforms: linux/arm64
         push: true
         tags: ghcr.io/${{ github.actor }}/${{ env.IMAGE_NAME }}:${{ steps.tag.outputs.tag }}
         cache-from: type=registry,ref=ghcr.io/${{ github.actor }}/${{ env.IMAGE_NAME }}:${{ steps.tag.outputs.tag }}
