--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -13,21 +13,34 @@ jobs:
     steps:
     - name: Set up QEMU
       uses: docker/setup-qemu-action@v1
-    - name: Get tag
-      id: tag
-      uses: dawidd6/action-get-tag@v1
-    - uses: docker/build-push-action@v2
-    - name: Set up Docker Buildx
+    - name: set up docker buildx
+      id: buildx
       uses: docker/setup-buildx-action@v1
-    - name: Log into GitHub Container Registry
-      run: echo "${{ secrets.REGISTRY_ACCESS_TOKEN }}" | docker login https://ghcr.io -u ${{ github.actor }} --password-stdin
-    - name: Build and push
+    - name: login to GHCR
+      uses: docker/login-action@v1
+      with:
+        registry: ghcr.io
+        username: ${{ github.actor }}
+        password: ${{ secrets.REGISTRY_ACCESS_TOKEN }}
+    - name: docker metadata
+      id: dockermetadata
+      uses: docker/metadata-action@v3
+      with:
+        images: |
+          ghcr.io/${{ github.actor }}/${{ env.IMAGE_NAME }}
+        tags: |
+          type=schedule
+          type=ref,event=branch
+          type=ref,event=pr
+          type=semver,pattern={{version}}
+          type=semver,pattern={{major}}.{{minor}}
+          type=semver,pattern={{major}}
+          type=sha
+    - name: build and push
       uses: docker/build-push-action@v2
       with:
-        platforms: linux/arm64
-        push: true
-        tags: ghcr.io/${{ github.actor }}/${{ env.IMAGE_NAME }}:${{ steps.tag.outputs.tag }}
-        cache-from: type=registry,ref=ghcr.io/${{ github.actor }}/${{ env.IMAGE_NAME }}:${{ steps.tag.outputs.tag }}
-        cache-to: type=inline
-        build-args: |
-          IMAGE_NAME=${{ env.IMAGE_NAME }}
+        context: .
+        platforms: linux/arm64/v8
+        push: ${{ github.event_name != 'pull_request' }}
+        tags: ${{ steps.dockermetadata.outputs.tags }}
+        labels: ${{ steps.dockermetadata.outputs.labels }}
